final touch algo

--- a/algorithm1.ipynb
+++ b/algorithm1.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
-    "import ic_model \n",
-    "import pp_model\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from datasets import load_dataset\n",
+    "from pickleModels import ic_model \n",
+    "from pickleModels import pp_model\n",
     "# import nltk\n",
     "# nltk.download('punkt')\n",
     "pd.set_option('display.max_colwidth', 1000)"
@@ -20,18 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using custom data configuration default\n",
-      "Reusing dataset craigslist_bargains (/Users/kabirbatra/.cache/huggingface/datasets/craigslist_bargains/default/1.1.0/9e4e64d13ea36e435a8f56f9305d3c771115909b7fe83269bf7cd8dd40302338)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_ds = load_dataset('craigslist_bargains', split= 'validation')\n",
     "test_ds = pd.DataFrame(test_ds)\n",
@@ -41,32 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "agent_info                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 {'Bottomline': ['None', 'None'], 'Role': ['buyer', 'seller'], 'Target': [38.0, 50.0]}\n",
-       "agent_turn                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0]\n",
-       "intent                                                                                                                                                                                                                                                                                                                                                                                                                                        {'intent': ['intro', 'unknown', 'init-price', 'counter-price', 'inquiry', 'inform', 'counter-price', 'counter-price', 'inquiry', 'inform', 'insist', 'unknown', 'offer', 'accept'], 'price': [-1.0, -1.0, 30.0, 80.0, -1.0, -1.0, 38.0, 40.0, -1.0, -1.0, 38.0, -1.0, 38.0, -1.0]}\n",
-       "bargain_convo    [Who is the manufacturer?, Its Tom and Associates. They're pretty neat and good at their work !, Oh, Ive own a piece from them in the past, it only lasted 5 years. Would you take $30?, That's very low for me. I got the item for $80. The couch is very comfortable and in a very good condition. The item has very strong woods that last for years. , How old is it?, Only one year old, All I have on me right now is $38, if you'd accept that, I can pick it up in under an hour., Lets make it $40 and I will offer to deliver it to you?, When can you deliver it?, By tomorrow and I accept cash only, I won't be around tomorrow. But I can come right now if you'll take $38, okay then deal!, , ]\n",
-       "items                                                                                                                                                                                                                      {'Category': ['furniture', 'furniture'], 'Images': ['', ''], 'Price': [50.0, 50.0], 'Description': ['Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.'], 'Title': ['Very comfy well maintained couch', 'Very comfy well maintained couch']}\n",
-       "Name: 6, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,14 +88,14 @@
     "\n",
     "def Intentcounterprice(buyer_bid):\n",
     "    discount = pp_model.max_discount_predict(getBuyerIntent())\n",
-    "    bod_bid = \n",
+    "    bod_bid = 0\n",
     "    saveIntentIntoTimeline(['counter-price',buyer_bid,'counter-price',bod_bid])\n",
     "    return 'counter-price'    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,30 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3747]\n",
-      "intro\n",
-      "current intents saved in intent_timeline [['buyers_intent' 'buyers_bid' 'bots_intent' 'bots_bid']\n",
-      " ['intro' '0' 'intro' '0']]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'intro'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "decisionEngine(\"hey, how you doing?\")"
    ]
