--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,24 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import algorithm\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import random"
+    "import random\n",
+    "from sentimentAnalysis import sentenceSimilarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_price_limit(upperLimit, lowerLimit):\n",
-    "    price_limit = np.array([upperLimit,lowerLimit])\n",
+    "def set_product_details(upperLimit, lowerLimit, description):\n",
+    "    sentenceSimilarity.vectorize_description(description)\n",
+    "    botReply[\"inquiry\"].append(description)\n",
+    "    price_limit = np.array([upperLimit, lowerLimit])\n",
     "    np.save('price_limit.npy', price_limit)\n",
     "\n",
     "def print_price_limit():\n",
@@ -31,16 +34,17 @@
     "    np.save('buyer_timeline.npy', buyer_timeline)\n",
     "\n",
     "    bot_timeline = np.array([['bot_intent','bot_bid']])\n",
-    "    np.save('bot_timeline.npy', bot_timeline)"
+    "    np.save('bot_timeline.npy', bot_timeline)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "botReply = {\n",
+    "    \"title\": \"\",\n",
     "    \"intro\": [\n",
     "                \"Hey There fellow Negotiator, let's get Negotiating.\", \n",
     "                \"!£%₹¥ $25...beep boop OH HEY THERE!..sorry.. how can i help?\",\n",
@@ -53,7 +57,7 @@
     "                \"Bonjour! pleasure meeting you today, how can i help?\",\n",
     "                \"Hello, hope we both settle on a good price today.\"\n",
     "    ],\n",
-    "    \"inquiry\": [\"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\"],\n",
+    "    \"inquiry\": [],\n",
     "    \"agree\": [\n",
     "                \"${} sounds good, Glad you made the right decision.\",\n",
     "                \"${} sounds good, I've got another offer, a virtual hand shake.\",\n",
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,77 +180,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "set_timeline()\n",
-    "set_price_limit(500, 430)\n",
+    "set_product_details(5000, 3000, \"Toyota Prius 2014. Only driven 65k kilometers. It has Bluetooth, CD, AUX, Keyless Go. There was no engine or transmission damage. Very clean inside, never smoked inside. Well maintained. Oil change every 5k miles with synthetic Toyota Original Oil. Registered until February 2019. Title on hands. It lost its clean title status due to rear bumper hit. Small scratch on the right side. I'm the second owner and had no any problem with it. The car is great, 50+ MPG. Will run 100k miles more easily.\")\n",
     "convo = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current intent:  counter-price\n",
-      "current buyer offer: 430\n",
-      "buyer_timeline:\n",
+      "current buyer's intent: counter-price\n",
+      "buyer's sentiment intent: negative\n",
+      "Cosine Similarity:  [[0.26802813]]\n",
+      "negative context: True\n",
+      "current buyer's offer: 3500\n",
+      "Buyer's timeline:\n",
       "[['buyer_intent' 'buyer_bid']\n",
+      " ['unknown' '0']\n",
       " ['intro' '0']\n",
       " ['inquiry' '0']\n",
-      " ['counter-price' '400']\n",
-      " ['counter-price' '410']\n",
-      " ['counter-price' '420']\n",
-      " ['counter-price' '430']]\n",
-      "['intro', 'inquiry', 'counter-price', 'counter-price', 'counter-price', 'counter-price']\n",
-      "[1, 6, 4, 4, 4, 4, 0, 0, 0, 0, 0, 0, 0]\n",
-      "price prediction: 425.0 discount% [15]\n",
-      "case1\n",
-      "log: Equal Offers. Switching to Intent-agree for response\n",
-      "bot_timeline:\n",
+      " ['counter-price' '3500']]\n",
+      "['unknown', 'intro', 'inquiry', 'counter-price']\n",
+      "[0, 1, 6, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Price prediction: 3950.0 Discount% [21]\n",
+      "True\n",
+      "log: Negative context set to true, offering additional discount\n",
+      "3713.0 3500\n",
+      "Price after approximation: 3713.0\n",
+      "Bot's timeline:\n",
       "[['bot_intent' 'bot_bid']\n",
+      " ['unknown' '0']\n",
       " ['intro' '0']\n",
       " ['inquiry' '0']\n",
-      " ['counter-price' '490']\n",
-      " ['counter-price' '460']\n",
-      " ['counter-price' '455']\n",
-      " ['agree' '430']]\n",
+      " ['counter-price' '3713']]\n",
       "--------conversation-begins--------\n",
+      "You: c\n",
+      "\n",
+      "Bot: Oops! Didn't get you there, will you please rephrase.\n",
+      "\n",
       "You: hey\n",
       "\n",
-      "Bot: Hey There fellow Negotiator, let's get Negotiating.\n",
+      "Bot: Hola, Its the almighty negotiation bot, let's get Negotiating.\n",
       "\n",
       "You: how much\n",
       "\n",
-      "Bot: Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\n",
+      "Bot: Toyota Priyus 2014. Only driven 65k kilometers. It has Bluetooth, CD, AUX, Keyless Go. There was no engine or transmission damage. Very clean inside, never smoked inside. Well maintained. Oil change every 5k miles with synthetic Toyota Original Oil. Registered until February 2019. Title on hands. It lost its clean title status due to rear bumper hit. Small scratch on the right side. I'm the second owner and had no any problem with it. The car is great, 50+ MPG. Will run 100k miles more easily.\n",
       "\n",
-      "You: how about $400\n",
+      "You: no that's too much for 2014 toyota. how about $3500\n",
       "\n",
-      "Bot: I've an offer no one would have given you $490.\n",
-      "\n",
-      "You: how about $410\n",
-      "\n",
-      "Bot: Let's meet somewhere in the middle at $460.\n",
-      "\n",
-      "You: how about $420\n",
-      "\n",
-      "Bot: Let's meet somewhere in the middle at $455.\n",
-      "\n",
-      "You: how about $430\n",
-      "\n",
-      "Bot: $430 sounds good, Pleasure doing business with you!\n",
+      "Bot: I've an offer no one would have given you $3713.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "negoBot(\"how about $430\")"
+    "# negoBot(\"I want to buy this product\") # IntentIntro no that's too much for 2014 toyota priyus. how about $4000\n",
+    "negoBot(\"no that's too much for 2014 toyota. how about $3500\")"
    ]
   }
  ],
