--- a/pricePrediction/model.ipynb
+++ b/pricePrediction/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "[2745 rows x 1 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[2745 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "0.41129326047358833"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0])"
+       "array([10])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
     "#                8:'insist',\n",
     "# }\n",
     "\n",
-    "classifier.predict([[1,6,4,4,7,4,2,7,4,4,4,4,4]])"
+    "classifier.predict([[1, 6, 4, 7, 4, 0, 0, 0, 0, 0, 0, 0, 0]])"
    ]
   }
  ],
