--- a/pricePrediction/model.ipynb
+++ b/pricePrediction/model.ipynb
@@ -418,11 +418,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "30326061de640313b16f1c2b9b63d2a15630a3c5e7cebec4d516c4b3adf1e1c7"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.8.8 ('base')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -437,7 +435,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "49cb93f377a7abe7414b7b0f21fb3017538004a126cf690fb524202736b7fb92"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
