--- a/sentimentAnalysis/sentimentModel.ipynb
+++ b/sentimentAnalysis/sentimentModel.ipynb
@@ -318,9 +318,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "7b4b4feff2f24a0f0a34464dbe537a36fda679851528fb8735cb41fa49dffb2d"
-  },
   "kernelspec": {
    "display_name": "Python 3.8.8 ('base')",
    "language": "python",
@@ -338,7 +335,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "49cb93f377a7abe7414b7b0f21fb3017538004a126cf690fb524202736b7fb92"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
